// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services GorgiasApi cancelPendingRequests() should not be able to cancel pending requests because instance was not created with this ability 1`] = `"Cannot call \`.cancelPendingRequests()\` on this instance because it was not created with this ability."`;

exports[`services GorgiasApi downloadStatistic() should fetch a statistic with the given name and filters (ready to be downloaded) 1`] = `
Immutable.Map {
  "name": "support-volume-2019-05-23-2019-05-29.csv",
  "contentType": "text/csv",
  "data": Immutable.Map {
    "data": Immutable.Map {},
    "meta": Immutable.Map {},
  },
}
`;

exports[`services GorgiasApi downloadStatistic() should fetch a statistic with the given name and filters (ready to be downloaded) 2`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{\\"responseType\\":\\"blob\\",\\"filters\\":{\\"tags\\":[1,2],\\"score\\":\\"4\\"}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxContentLength": -1,
      "method": "post",
      "timeout": 180000,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/stats/overview/download",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`services GorgiasApi getStatistic() should fetch a statistic with the given name and filters 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{\\"filters\\":{\\"tags\\":[1,2],\\"score\\":\\"4\\"}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxContentLength": -1,
      "method": "post",
      "timeout": 180000,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/stats/overview/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`services GorgiasApi startSubscription() should start the subscription of the current account. 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/billing/subscription/start/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;

exports[`services GorgiasApi updateCreditCard() should update the credit card of the current account. 1`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "cancelToken": CancelToken {
        "promise": Promise {},
      },
      "data": "{\\"token\\":\\"tok_2xe129dnm21d2miwmdfsa\\"}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/billing/credit-card/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
